Add Outlook Calendar integration

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,11 @@ ADMIN_EMAIL=you@gmail.com
 GOOGLE_CLIENT_ID=your_client_id.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your_client_secret
 
+# Microsoft/Outlook OAuth (optional - for Outlook calendar support)
+# Create app at https://portal.azure.com/#blade/Microsoft_AAD_RegisteredApps/ApplicationsListBlade
+MICROSOFT_CLIENT_ID=your_microsoft_client_id
+MICROSOFT_CLIENT_SECRET=your_microsoft_client_secret
+
 # Session secret (required)
 # Generate: openssl rand -hex 32
 JWT_SECRET=your_jwt_secret
