Validate required secrets before deployment

--- a/.github/workflows/sync-and-deploy.yml
+++ b/.github/workflows/sync-and-deploy.yml
@@ -56,6 +56,34 @@ jobs:
       contents: read
       deployments: write
     steps:
+      - name: Validate required secrets
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          ADMIN_EMAIL: ${{ secrets.ADMIN_EMAIL }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          APP_URL: ${{ secrets.APP_URL }}
+          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+        run: |
+          missing=()
+          [ -z "$CLOUDFLARE_API_TOKEN" ] && missing+=("CLOUDFLARE_API_TOKEN")
+          [ -z "$CLOUDFLARE_ACCOUNT_ID" ] && missing+=("CLOUDFLARE_ACCOUNT_ID")
+          [ -z "$ADMIN_EMAIL" ] && missing+=("ADMIN_EMAIL")
+          [ -z "$JWT_SECRET" ] && missing+=("JWT_SECRET")
+          [ -z "$APP_URL" ] && missing+=("APP_URL")
+          [ -z "$GOOGLE_CLIENT_ID" ] && missing+=("GOOGLE_CLIENT_ID")
+          [ -z "$GOOGLE_CLIENT_SECRET" ] && missing+=("GOOGLE_CLIENT_SECRET")
+
+          if [ ${#missing[@]} -gt 0 ]; then
+            echo "::error::Missing required secrets: ${missing[*]}"
+            echo ""
+            echo "Please add these secrets in GitHub: Settings > Secrets and variables > Actions"
+            echo "See README.md for setup instructions."
+            exit 1
+          fi
+          echo "All required secrets are configured"
+
       - name: Checkout
         uses: actions/checkout@v4
         with:
