Add workflows permission to sync workflows

--- a/.github/workflows/sync-and-deploy.yml
+++ b/.github/workflows/sync-and-deploy.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      workflows: write
     outputs:
       changes: ${{ steps.sync.outputs.changes }}
     steps:
